--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "connect-session-sequelize": "^7.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-session-sequelize": "^2.3.0",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.5"
   },
