Update file location and imports for recent changes

--- a/.gitignore
+++ b/.gitignore
@@ -1245,3 +1245,26 @@ client/node_modules/.cache/eslint-loader/d5e612b2684eebf90f355c2e62f6b583eee13a8
 client/node_modules/.cache/eslint-loader/f4e5fbbf7339d150735ba15e8b538747c597002f.json.gz
 client/node_modules/.cache/eslint-loader/f88613a55ef3678976a0c72be3a24c23bb8c62df.json.gz
 client/node_modules/.cache/eslint-loader/fe61cc752e4e2df858b64d5d011016f4d1921a49.json.gz
+client/node_modules/.cache/babel-loader/5ad64792dd15773f9c224d4e473ff673.json
+client/node_modules/.cache/babel-loader/6ca408fb58343619a4c1bd8559af76a3.json
+client/node_modules/.cache/babel-loader/6cf9ad4512e95d73cf46a6e9337cf8f0.json
+client/node_modules/.cache/babel-loader/8c2676df46b2324fedc4288c57d71888.json
+client/node_modules/.cache/babel-loader/9efd706e7bab807ff85322a3df70605a.json
+client/node_modules/.cache/babel-loader/41cbb77ef6bfcad9dfa7143094487ef3.json
+client/node_modules/.cache/babel-loader/79ae45ecbfa782cc69388775eeea823e.json
+client/node_modules/.cache/babel-loader/82aa5fcd1bd30c5be88a62278814177e.json
+client/node_modules/.cache/babel-loader/132ae93120d22dda9bf74fb15b994287.json
+client/node_modules/.cache/babel-loader/502eea6e75589639c761552a6a411ffd.json
+client/node_modules/.cache/babel-loader/ad5c1d037ce8368ea2163599dc96cdf2.json
+client/node_modules/.cache/babel-loader/bbf83b637947a8310561072ed02c7b69.json
+client/node_modules/.cache/babel-loader/d2c05ce0d250f8c2bf95486c1ae43020.json
+client/node_modules/.cache/babel-loader/e24fcca22dc798aa4f1dab9e736e0826.json
+client/node_modules/.cache/eslint-loader/0ae6e77381c4d75a090c313d7d2a2fe8da43061e.json.gz
+client/node_modules/.cache/eslint-loader/3ae3010cf10afc39e1527e339b5803ec461e0f60.json.gz
+client/node_modules/.cache/eslint-loader/69d71c0bba8237985a29a1538770ce2ca277e25f.json.gz
+client/node_modules/.cache/eslint-loader/978adb02166b2cd9f5008372f3893aea98c1d63e.json.gz
+client/node_modules/.cache/eslint-loader/b64d040c2f82c782d104f3292c948a6b933c54bc.json.gz
+client/node_modules/.cache/eslint-loader/c5018a4923238091354cdaea3291f868c85b15e6.json.gz
+client/node_modules/.cache/eslint-loader/cf0db747c2d68173d04071cb7a25426d2e761a6d.json.gz
+client/node_modules/.cache/eslint-loader/d76b50d340575989b6539a4a4987ad78ca0f0cfb.json.gz
+client/node_modules/.cache/eslint-loader/e1de6dc065ee6a84a6c2d44fb1bd1d35c888eb9e.json.gz
