--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,16 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
-    "js-cookie": "^2.2.1",
     "firebase": "^7.20.0",
+    "js-cookie": "^2.2.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "sweetalert2": "^10.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
