--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.20.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -21,6 +22,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "recharts": "^1.8.5",
     "sweetalert2": "^10.1.0"
   },
   "scripts": {
