--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,9 +15,11 @@
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
+    "material-table": "^1.69.0",
     "moment": "^2.29.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-confirm": "^0.1.20",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.1",
     "react-router": "^5.2.0",
