--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-confirm": "^0.1.20",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.1",
+    "react-modal": "^3.11.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
