--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node server.js",
     "start:dev": "nodemon server.js",
     "server": "nodemon server.js",
-    "heroku-postbuild": "cd client && npm install && yarn run build"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
