--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,9 @@
     "react-confirm": "^0.1.20",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.1",
+    "react-loader-spinner": "^3.1.14",
     "react-modal": "^3.11.2",
+    "react-promise-tracker": "^2.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
